[package]
name = "test3"
version = "0.1.0"
authors = ["Simon Hausmann <hausmann@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "test3"
harness = false           # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "esp-idf-sys/native"]

std = ["esp-idf-sys/binstart", "esp-idf-sys/std"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-sys = { version = "0.36.1", default-features = false }

[build-dependencies]
embuild = "0.33.0"

